[project]
name = "MFramework.py"
version = "5"
authors = [{ name = "Mmesek" }]
description = "Command framework for mDiscord"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]
requires-python = ">=3.10"

[project.urls]
"Homepage" = "https://github.com/Mmesek/MFramework.py"
"Bug Tracker" = "https://github.com/Mmesek/MFramework.py/issues"
"Source Code" = "https://github.com/Mmesek/MFramework.py"

[project.license]
file = "LICENSE"

[tool.pytest.ini_options]
addopts = "--cov=MFramework tests/"
testpaths = ["MFrawork", "tests"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[project.optional-dependencies]
tests = ["pytest", "pytest-cov", "pytest-asyncio", "pytest-mock"]
lint = ["ruff"]
dev = ["MFramework[tests,lint]", "pre-commit"]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:"
]

[tool.ruff]
line-length = 120
src = ["MFramwork"]

[tool.ruff.format]
docstring-code-format = true
line-ending = "lf"

[tool.ruff.lint]
ignore = [
    "E401", # Multiple imports on one line
    "F403", # Wildcard import
    "F405", # Possibly undefined symbol or imported from wildcard
]
isort.combine-as-imports = true
pydocstyle.convention = "numpy"
